5d (0.6.3) unstable; urgency=low

  * rename 'ground to 'floor in module "Arithmetic".
  * fix strFromList [] to return [].
  * fix formatting of negative numbers (i.e. [2 (-2)])

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 20 Apr 2012 23:12:00 +0200

5d (0.6.2) unstable; urgency=low

  * add pairs.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 15 Apr 2012 20:39:00 +0200

5d (0.6.1) unstable; urgency=low

  * add 'while!, 'until!
  * add tuples (simple version).
  * handle [*\s 1] in parser.
  * add "#exports" to module "Composition".

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 08 Apr 2012 23:13:00 +0200

5d (0.6.0) unstable; urgency=low

  * extract REPL into its own module
  * remove import, define, defrec and def macros.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 05 Apr 2012 10:03:00 +0200

5d (0.5.2) unstable; urgency=low

  * make cross product operator precedence less than product operator precedence (to make ∇⨯a⋅b = ∇⨯(a⋅b)).
  * add Ratio for rational numbers.
  * add sum, product, anyTrue?, allTrue? .

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 24 Mar 2012 23:17:00 +0100

5d (0.5.1) unstable; urgency=low

  * add "LinearAlgebra" module.
  * support ":=" in let.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 15 Mar 2012 07:50:00 +0100

5d (0.5.0) unstable; urgency=low

  * add base case to module dispatcher.
  * add "Object".
  * extract module system from REPL into Modules.cc

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 11 Mar 2012 11:36:00 +0100

5d (0.4.1) unstable; urgency=low

  * add strcat

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Tue, 06 Mar 2012 20:38:00 +0100

5d (0.4.0) unstable; urgency=low

  * make names of all monadic fns end on "!" if alphanumeric.
  * fix conversions to C primitives.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 02 Mar 2012 01:36:00 +0100

5d (0.3.7) unstable; urgency=low

  * switch to our own HashTable implementation.
  * make 'makeFn work.